============
 Changelog
============

This file describe new features and incompatibilites between released version of the CMS.


Release 1.1.0
=============

  * Admin widgets now needs to a registery to be used within the admin.
    The CMS doesn't load load an external module for you anymore.
  * RTL support for pages in admin
  * The context variable `pages` has been renammed to `pages_naviagtion` to avoid
    any name conflict with some pagination tags.

Release 1.0.9
=============

 * Finish to migrate the old wiki into the sphinx documentation
 * Fix the package so it can be installed properly with easy_install
 * Add a new placeholder {% imageplaceholder %} for a basic automatic image handling in the admin.

Release 1.0.8
=============

 * A few bug fix.
 * A automatic internal link system. Page link don't break even if you move the linked page.