@@ -77,7 +77,7 @@
 <h2>Complete navigation (as a nested list)</h2>
 
 <ul>
-    {% for page in pages %}
+    {% for page in pages_navigation %}
         {% pages_menu page %}
     {% endfor %}
 </ul>
