@@ -1,6 +1,6 @@
 {% load cache pages_tags %}
 {% load_pages %}
-{% for page in pages %}
+{% for page in pages_navigation %}
     {{ page.slug }}
 {% endfor %}
 
